--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <button class="count-budget-btn">Рассчитать</button>
             
             <div class="choose-income-label">Введите статьи возможного дохода через запятую</div>
-            <input class="choose-income" type="text" id="income">
+            <input class="choose-income" type="text" id="income-value">
             
             <div class="checksavings">Есть ли накопления: 
                 <input id="savings" type="checkbox" />
